--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     ― Hello World! &#x1F609;
+    <!-- Main information  -->
     <!-- Primary content template -->
         <main>
             <div class="resume">
@@ -73,6 +74,18 @@
             </div>
         </div>
     </div>
+
+    <!-- Second information  -->
+    <div class="container">
+        <div class="resume__block">
+            <div class="skills">
+                <h3 class="skills__header">Skills</h3>
+                <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+            </div>
+        </div>
+    </div>
+
+    
 
   </body>
 </html>
