--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script> 
      /* information about Photo */ 
         const a = () => alert('Photo from Odessa'); 
+        const b = () => alert('hehe 😺'); 
     </script>
     <!-- Main information  -->
     <!-- Primary content template -->
@@ -79,9 +80,9 @@
                     </svg>
                 </div>
                 <p class="intro_text">Meow.
-                    I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                    all I do is sleep and try to help out hoomans with their projects whenever
-                    they need me.
+                    I like to learn new things, like how this or that construction or mechanism works or something like that. But at the
+                    same time I am interested in learning something related to history or art. I can easily hold a conversation on any
+                    topic. I would like to have more patience and patience, and to know English better. And i think I'm <span onclick="b()"><b>russophobe</b></span>.
                 </p>
             </div>
         </div>
