--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                              <div>
 
                                     <div>
-                                        <a href="" rel="author" class="contact-info__item_geo">
+                                        <a href="" rel="author" class="contact-info__item">
                                             <div class="contact-info__item-icon-wrapper">
                                                 <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                                     <path
@@ -53,7 +53,7 @@
                                             <span>Kyiv, Ukraine</span>
                                         </a>
                                         
-                                        <a href="https://www.linkedin.com/in/kristina-hodakivska-b04903230/" rel="author" class="contact-info__item_geo">
+                                        <a href="https://www.linkedin.com/in/kristina-hodakivska-b04903230/" rel="author" class="contact-info__item">
                                             <div class="contact-info__item-icon-wrapper">
                                                 <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                                     <path
